@@ -36,6 +36,7 @@ MooseX::Getopt            = 0.31
 ; Hailo.pm
 Any::Moose                = 0.13
 autodie                   = 2.08
+Class::Load               = 0.06
 IPC::System::Simple       = 1.21
 File::CountLines          = 0.0.2
 IO::Interactive           = 0.0.6
