@@ -4,6 +4,7 @@ use 5.010;
 use autodie qw(open close);
 use Any::Moose;
 use Any::Moose 'X::StrictConstructor';
+use Class::Load qw(try_load_class);
 use Scalar::Util qw(blessed);
 use List::Util qw(first);
 use namespace::clean -except => 'meta';
@@ -190,13 +191,8 @@ sub _new_class {
         }
     }
 
-    if (Any::Moose::moose_is_preferred()) {
-        require Class::MOP;
-        eval { Class::MOP::load_class($pkg) };
-    } else {
-        eval qq[require $pkg];
-    }
-    die $@ if $@;
+    my ($success, $error) = try_load_class($pkg);
+    die $error if !$success;
 
     return $pkg->new(%$args);
 }
